# open-samus-returns-rando

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  input.json  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: patch.yml  python.yml
open-samus-returns-rando/: custom_init.lua  samus_returns_patcher.py  schema.json
open_samus_returns_rando/: __init__.py  __main__.py  bmsld_add.py  cli.py  constants.py  custom_init.lua  custom_pickups.py  debug.py  logger.py  lua_editor.py  lua_util.py  model_data.py  patch_util.py  patcher_editor.py  pickup.py  samus_returns_patcher.py  schema.json  temp_helper.py  text_patches.py  validator_with_default.py  version.py
open_samus_returns_rando.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
open_samus_returns_rando/__pyinstaller/: __init__.py
open_samus_returns_rando/files/: custom_heatzone.lua  custom_player.lua  custom_savestation.lua  custom_scenario.lua  custom_ship.lua  doors.lua  heatzone.lua  player.lua  randomizer_powerup.lua  savestation.lua  schema.json
open_samus_returns_rando/files/levels/: s000_surface.lc.lua  s000_surface.lua  s010_area1.lc.lua  s010_area1.lua  s020_area2.lua  s025_area2b.lc.lua  s025_area2b.lua  s028_area2c.lc.lua  s028_area2c.lua  s030_area3.lc.lua  s030_area3.lua  s033_area3b.lc.lua  s033_area3b.lua  s036_area3c.lc.lua  s036_area3c.lua  s040_area4.lc.lua  s040_area4.lua  s050_area5.lc.lua  s050_area5.lua  s060_area6.lc.lua  s060_area6.lua  s065_area6b.lc.lua  s065_area6b.lua  s067_area6c.lc.lua  s067_area6c.lua  s070_area7.lc.lua  s070_area7.lua  s090_area9.lc.lua  s090_area9.lua  s100_area10.lua  s110_surfaceb.lc.lua  s110_surfaceb.lua
open_samus_returns_rando/files/pickups/: powerup_energyshield.lua  powerup_energywave.lua  powerup_gravitysuit.lc.lua  powerup_gravitysuit.lua  powerup_phasedisplacement.lua  powerup_scanningpulse.lua  powerup_variasuit.lc.lua  powerup_variasuit.lua
open_samus_returns_rando/files/templates/: chozoseal_template.lua  custom_init.lua  metroid_template.lua  randomizer_item_template.lua  template_powerup_bmsad.json
open_samus_returns_rando/misc_patches/: credits.py  exefs.py  lua_util.py  text_patches.py
open_samus_returns_rando/pickups/: model_data.py  pickup.py
open_samus_returns_rando/specific_patches/: chozo_seal_patches.py  door_patches.py  game_patches.py  heat_room_patches.py  map_icons.py  metroid_patches.py  static_fixes.py  tunable_patches.py
open_samus_returns_rando/templates/: progressive_model_template.lua  randomizer_progressive_template.lua
src/open_samus_returns_rando/: __init__.py  cli.py  constants.py  debug.py  exefs_patches.py  logger.py  lua_editor.py  model_data.py  multiworld_integration.py  patch_util.py  patcher_editor.py  pickup.py  samus_returns_patcher.py  validator_with_default.py
src/open_samus_returns_rando/__pyinstaller/: __init__.py  hook-open_samus_returns_rando.py
src/open_samus_returns_rando/doors/: custom_doors.py  door_patches.py
src/open_samus_returns_rando/files/: custom_savestation.lua  custom_scenario.lua  custom_ship.lua  guilib.lua  randomizer_powerup.lua  schema.json
src/open_samus_returns_rando/files/custom/: arachnus.lua  disconnect_gui.lua  guilib.lua  heatzone.lua  message_gui.lua  randoapi.lua  room_names.lua  scenario.lua  sprites_splashes.lua  sprites_texturehud.lua
src/open_samus_returns_rando/files/exefs_patches/: code.bps  code.ips  code_ntsc.bps  code_pal.bps  exheader.ips
src/open_samus_returns_rando/files/levels/: s000_surface.lua  s010_area1.lua  s020_area2.lua  s025_area2b.lua  s028_area2c.lua  s030_area3.lua  s033_area3b.lua  s036_area3c.lua  s040_area4.lua  s050_area5.lua  s060_area6.lua  s065_area6b.lua  s067_area6c.lua  s070_area7.lua  s090_area9.lua  s100_area10.lua  s110_surfaceb.lua
src/open_samus_returns_rando/files/pickups/: randomizerbabyhatchling.lua  randomizerenergyshield.lua  randomizerenergytank.lua  randomizerenergywave.lua  randomizermissilelauncher.lua  randomizermissiletank.lua  randomizerphasedisplacement.lua  randomizerpowerbomb.lua  randomizerpowerbombtank.lua  randomizerreservetanka.lua  randomizerreservetanke.lua  randomizerreservetankm.lua  randomizerscanningpulse.lua  randomizersuit.lua  randomizersupermissile.lua  randomizersupermissiletank.lua
src/open_samus_returns_rando/misc_patches/: actor_attributes.py  block_patches.py  collision_camera_table.py  credits.py  elevators.py  exefs.py  final_boss.py  lua_util.py  spawn_points.py  text_patches.py  triggers.py
src/open_samus_returns_rando/pickups/: custom_pickups.py  map_icons.py  model_data.py  multiworld_integration.py  pickup.py
src/open_samus_returns_rando/romfs/: lzss.py  packaged_romfs.py  rom3ds.py
src/open_samus_returns_rando/specific_patches/: chozo_seal_patches.py  cosmetic_patches.py  door_patches.py  environmental_damage.py  environmental_damage_sources.py  game_patches.py  heat_room_patches.py  hint_patches.py  map_icons.py  metroid_patches.py  static_fixes.py  tunable_patches.py
tests/: conftest.py  test_lua_util.py  test_open_samus_returns_patcher.py  test_rom3ds.py
tests/test_files/: crumble_blocks.json  dyceron_model_fix.json  dyceron_model_test_room.json  item_models_test.json  metroid_2b.json  metroid_test.json  models.json  models_1.json  models_2.json  models_2b.json  models_2c.json  models_3.json  models_3b.json  models_3c.json  models_4.json  models_5.json  models_surface.json  multi_test.json  rdv_seed.json  room_name_test.json  starter_preset_patcher.json  thanatos_dev.json  thanatos_dev_heat_3b.json  thanatos_dev_heat_3c.json  thanatos_dev_heat_4.json  thanatos_dev_heat_5_1.json  thanatos_dev_heat_5_2.json  thanatos_dev_heat_6_b.json  thanatos_dev_heat_6_c.json  thanatos_dev_progressive_test.json
(+78 files in other folders)
