[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.4.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "open_samus_returns_rando"
description = "An open source randomizer patcher for Metroid: Samus Returns."
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "mercury-engine-data-structures>=0.31.1",
    "jsonschema>=4.0.0",
    "ips.py>=0.1.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/randovania/open-samus-returns-rando"

# Entry Points for PyInstaller
[project.entry-points.pyinstaller40]
hook-dirs = "open_samus_returns_rando.__pyinstaller:get_hook_dirs"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/open_samus_returns_rando/version.py"

[tool.ruff]
line-length = 120
lint.select = [
    "E", "F", "W", "C90", "I", "UP", "C4",
    "RSE",
    "TCH",
    "PTH",
    "COM818", "COM819",
    "ISC",
    "PIE",
    "PT",

    "PLC",
    "PLC0208",  # iterating over set is also not deterministic, so we shouldn't do that!

    "PLE",
    "PLR0402", "PLR1701", "PLR1711", "PLR1722", "PLR0206",
    "PLR0133", "PLR0124",
    "PLW",
]

# Version to target for generated code.
target-version = "py39"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 25.
# Defaults to 10, but we're being very flexible right now
max-complexity = 25

[project.optional-dependencies]
typing = [
    "types-jsonschema",
    "types-pyinstaller",
    "mypy"
]

[tool.mypy]
files = [
    "src/"
]
follow_imports = "silent"
disallow_untyped_defs = true
local_partial_types = true
