[metadata]
name = open-samus_returns-rando
description = An open source randomizer patcher for Metroid: Samus Returns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/randovania/open-samus_returns-rando
author = Dyceron
classifiers =
    OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
[options]
packages = open_samus_returns_rando
install_requires =
    mercury-engine-data-structures

include_package_data = True
zip_safe = False